WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22987
Regression: LayoutTests/editing/execCommand/5763082.html crashes
https://bugs.webkit.org/show_bug.cgi?id=22987
Summary
Regression: LayoutTests/editing/execCommand/5763082.html crashes
Dmitry Titov
Reported
2008-12-24 15:18:37 PST
This test started crashing after
r39456
because the function CompositeEditCommand::mergeIdenticalElements now has PassRefPtr parameters and passes them into more then one other function, losing their value along the way. The fix is to store parameters in local RefPtr variables and use those.
Attachments
Proposed patch
(1.49 KB, patch)
2008-12-24 15:37 PST
,
Dmitry Titov
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dmitry Titov
Comment 1
2008-12-24 15:37:23 PST
Created
attachment 26242
[details]
Proposed patch
Darin Adler
Comment 2
2008-12-25 10:04:11 PST
Comment on
attachment 26242
[details]
Proposed patch r=me Thanks for fixing the regression I caused!
Alexey Proskuryakov
Comment 3
2008-12-26 00:47:38 PST
Committed revision 39475.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug