2008-12-26  Dmitry Titov  <dimich@chromium.org>

Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=22987
        Fix for broken test editing/execCommand/5763082.html

        * editing/CompositeEditCommand.cpp:
        (WebCore::CompositeEditCommand::mergeIdenticalElements): Used local RefPtr to hold onto
        function parameter across multiple calls.



Canonical link: https://commits.webkit.org/31674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39475 268f45cc-cd09-0410-ab3c-d52691b4dbfc